# hallucination_evaluation

./: .env.example  Claude.md  MULTI_AGENT_SYSTEM_GUIDE.md  pyproject.toml
docs/: ARXIV_SEARCH_DESIGN.md  DEVELOPMENT_ROADMAP.md  LLM_INTEGRATION.md  PROJECT_BLUEPRINT.md
src/hallucination_review/: __init__.py  config.py  main.py
src/hallucination_review/agents/: __init__.py  base.py  coordinator.py  outline.py  reviewer.py  search.py  writer.py
src/hallucination_review/arxiv/: client.py
src/hallucination_review/llm/: client.py  prompts.py
src/hallucination_review/models/: messages.py  papers.py
src/hallucination_review/runtime/: factory.py
src/hallucination_review/utils/: parsing.py
