[project]
name = "hallucination-evaluation"
version = "0.1.0"
description = "Multi-agent literature review system with hallucination evaluation"
authors = [{name = "AutoGen Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogen-core>=0.4.0",
    "httpx>=0.26",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "rich>=13.7"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
